# MikanCli

./: .gitignore  README.md  README.zh-CN.md  practicum-proposal.md  pyproject.toml
.github/workflows/: publish.yml
autofeedsync/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  display.py  input_helpers.py  interactive.py  mikan.py  models.py  prompts.py  rules.py
mikancli/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  display.py  i18n.py  input_helpers.py  interactive.py  mikan.py  normalize.py  prompts.py  rules.py
mikancli/cli/: __init__.py  app.py  entrypoint.py  input_helpers.py  input_parsing.py  interactive.py  prompts.py  qbittorrent_flow.py  qbittorrent_setup.py  save_path_flow.py  search_flow.py
mikancli/core/: __init__.py  models.py  normalize.py  rules.py
mikancli/integrations/: __init__.py  mikan.py  mikan_parsers.py  mikan_urls.py  qbittorrent.py  qbittorrent_client.py
tests/: test_bootstrap.py  test_cli.py  test_config.py  test_mikan.py  test_normalize.py  test_prompts.py  test_qbittorrent.py  test_rules.py
