[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mikancli"
version = "0.1.0"
description = "CLI foundation for building qBittorrent RSS rules from anime search input."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "InquirerPy>=0.3",
]

[project.scripts]
mikancli = "mikancli.cli.entrypoint:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
